--- a/cloudhand-dotnetToWeb.yml
+++ b/cloudhand-dotnetToWeb.yml
@@ -23,5 +23,5 @@ steps:
   inputs:
     azureSubscription: 'DevopsToAzure'
     appType: 'webAppLinux'
-    appName: 'cloudhandsdotnet'
+    appName: 'cloudhands-dotnet'
     package: '$(System.DefaultWorkingDirectory)/**/*.zip'
